@@ -14,20 +14,32 @@ import java.nio.file.Paths;
 import java.nio.file.StandardOpenOption;
 import java.util.*;
 import java.util.concurrent.*;
+import java.util.regex.Pattern;
 import java.util.stream.Collectors;
 
 @Slf4j
 @Service
 public class GitHubProxyService {
     private static final String GITHUB_PROXY_FILE = "/data/github_proxy.txt";
-    private static final String TEST_URL = "https://github.com/har01d5/tvbox/raw/refs/heads/master/spiders_v2.json";
+    private static final String TEST_URL = "https://raw.githubusercontent.com/xiaoyaliu00/data/main/version.txt";
     private static final int BENCHMARK_THREADS = 5;
-    private static final int CONNECT_TIMEOUT_SECONDS = 8;
-    private static final int READ_TIMEOUT_SECONDS = 30;
+    private static final int CONNECT_TIMEOUT_SECONDS = 3;
+    private static final int READ_TIMEOUT_SECONDS = 3;
+    private static final int MAX_PROXY_COUNT = 5; // 最多配置 5 个代理
+    private static final Pattern VERSION_PATTERN = Pattern.compile("^\\d+\\.\\d+\\.\\d+$"); // 匹配版本号格式，如 0.54.49
+    private static final String DIRECT_PROXY = ""; // 直连（无代理）
 
     private final OkHttpClient httpClient;
+    private final Path githubProxyFile;
+    private final Map<String, GitHubProxyNode> benchmarkCache = new ConcurrentHashMap<>();
+    private volatile boolean isBenchmarking = false;
 
     public GitHubProxyService() {
+        this(Paths.get(GITHUB_PROXY_FILE));
+    }
+
+    GitHubProxyService(Path githubProxyFile) {
+        this.githubProxyFile = githubProxyFile;
         this.httpClient = new OkHttpClient.Builder()
                 .connectTimeout(CONNECT_TIMEOUT_SECONDS, TimeUnit.SECONDS)
                 .readTimeout(READ_TIMEOUT_SECONDS, TimeUnit.SECONDS)
@@ -43,7 +55,7 @@ public class GitHubProxyService {
         List<GitHubProxyNode> nodes = new ArrayList<>();
 
         // 从脚本嵌入的节点数据构建列表
-        nodes.add(new GitHubProxyNode("无代理（直连）", "", "", "", null, null, null, null));
+        nodes.add(new GitHubProxyNode("无代理（直连）", DIRECT_PROXY, "", "", null, null, null, null));
         nodes.add(new GitHubProxyNode("默认节点", "https://gh.llkk.cc/", "gh.llkk.cc", "donate", null, null, null, null));
         nodes.add(new GitHubProxyNode("公益贡献", "https://github.starrlzy.cn/", "github.starrlzy.cn", "donate", null, null, null, null));
         nodes.add(new GitHubProxyNode("高速节点", "https://slink.ltd/", "slink.ltd", "search", null, null, null, null));
@@ -85,7 +97,81 @@ public class GitHubProxyService {
     }
 
     /**
-     * 并发测速多个代理节点（5线程）
+     * 异步并发测速多个代理节点，结果实时更新到缓存
+     */
+    public void benchmarkNodesAsync(List<String> urls) {
+        if (urls == null || urls.isEmpty()) {
+            return;
+        }
+
+        if (isBenchmarking) {
+            log.warn("测速任务已在进行中，忽略新请求");
+            return;
+        }
+
+        isBenchmarking = true;
+        benchmarkCache.clear();
+
+        // 初始化缓存（标记为进行中）
+        for (String url : urls) {
+            benchmarkCache.computeIfAbsent(url, key -> {
+                GitHubProxyNode node = new GitHubProxyNode();
+                node.setUrl(key);
+                node.setLabel("测速中...");
+                node.setSuccess(null);
+                return node;
+            });
+        }
+
+        ExecutorService executor = Executors.newFixedThreadPool(BENCHMARK_THREADS);
+
+        for (String url : urls) {
+            executor.submit(() -> {
+                try {
+                    GitHubProxyNode result = benchmarkSingleNode(url);
+                    benchmarkCache.put(url, result);
+                    log.info("测速完成并更新缓存: {}", url);
+                } catch (Exception e) {
+                    log.error("测速异常: {}", url, e);
+                    GitHubProxyNode errorNode = new GitHubProxyNode();
+                    errorNode.setUrl(url);
+                    errorNode.setSuccess(false);
+                    errorNode.setError("异常: " + e.getMessage());
+                    benchmarkCache.put(url, errorNode);
+                }
+            });
+        }
+
+        // 异步等待所有任务完成
+        executor.shutdown();
+        CompletableFuture.runAsync(() -> {
+            try {
+                executor.awaitTermination(30, TimeUnit.SECONDS);
+            } catch (InterruptedException e) {
+                log.error("等待测速任务超时", e);
+            } finally {
+                isBenchmarking = false;
+                log.info("所有测速任务完成");
+            }
+        });
+    }
+
+    /**
+     * 获取测速结果缓存
+     */
+    public Map<String, GitHubProxyNode> getBenchmarkResults() {
+        return new HashMap<>(benchmarkCache);
+    }
+
+    /**
+     * 检查是否正在测速
+     */
+    public boolean isBenchmarking() {
+        return isBenchmarking;
+    }
+
+    /**
+     * 并发测速多个代理节点（5线程）- 同步版本
      */
     public List<GitHubProxyNode> benchmarkNodes(List<String> urls) {
         if (urls == null || urls.isEmpty()) {
@@ -119,9 +205,9 @@ public class GitHubProxyService {
         node.setUrl(proxyUrl);
 
         // 处理空字符串（直连）
-        if (proxyUrl == null || proxyUrl.trim().isEmpty()) {
+        if (DIRECT_PROXY.equals(proxyUrl)) {
             node.setLabel("无代理（直连）");
-            node.setHost("");
+            node.setHost(DIRECT_PROXY);
             return benchmarkDirect(node);
         }
 
@@ -151,11 +237,20 @@ public class GitHubProxyService {
             long endTime = System.currentTimeMillis();
             int latency = (int) (endTime - startTime);
 
-            if (response.isSuccessful()) {
-                node.setSuccess(true);
-                node.setLatency(latency);
-                node.setSpeed(0.0); // 这里简化处理，不计算速度
-                log.info("测速成功: {} - {}ms", node.getHost(), latency);
+            if (response.isSuccessful() && response.body() != null) {
+                String content = response.body().string().trim();
+
+                // 验证内容是否为版本号格式（如 0.54.49）
+                if (VERSION_PATTERN.matcher(content).matches()) {
+                    node.setSuccess(true);
+                    node.setLatency(latency);
+                    node.setSpeed(0.0);
+                    log.info("测速成功: {} - {}ms (版本: {})", node.getHost(), latency, content);
+                } else {
+                    node.setSuccess(false);
+                    node.setError("内容验证失败（非版本号）: " + content.substring(0, Math.min(20, content.length())));
+                    log.warn("测速失败: {} - 内容不符合版本号格式", node.getHost());
+                }
             } else {
                 node.setSuccess(false);
                 node.setError("HTTP " + response.code());
@@ -185,11 +280,20 @@ public class GitHubProxyService {
             long endTime = System.currentTimeMillis();
             int latency = (int) (endTime - startTime);
 
-            if (response.isSuccessful()) {
-                node.setSuccess(true);
-                node.setLatency(latency);
-                node.setSpeed(0.0);
-                log.info("直连测速成功: {}ms", latency);
+            if (response.isSuccessful() && response.body() != null) {
+                String content = response.body().string().trim();
+
+                // 验证内容是否为版本号格式（如 0.54.49）
+                if (VERSION_PATTERN.matcher(content).matches()) {
+                    node.setSuccess(true);
+                    node.setLatency(latency);
+                    node.setSpeed(0.0);
+                    log.info("直连测速成功: {}ms (版本: {})", latency, content);
+                } else {
+                    node.setSuccess(false);
+                    node.setError("内容验证失败（非版本号）: " + content.substring(0, Math.min(20, content.length())));
+                    log.warn("直连测速失败: 内容不符合版本号格式");
+                }
             } else {
                 node.setSuccess(false);
                 node.setError("HTTP " + response.code());
@@ -205,39 +309,133 @@ public class GitHubProxyService {
     }
 
     /**
-     * 保存 GitHub 代理到文件 /data/github_proxy.txt
-     * 确保以 / 结尾
+     * 保存 GitHub 代理列表到文件 /data/github_proxy.txt（多行格式）
+     * 每个代理一行，确保以 / 结尾，最多保存 5 个
      */
-    public void saveToFile(String proxyUrl) throws IOException {
-        Path filePath = Paths.get(GITHUB_PROXY_FILE);
+    public void saveProxyListToFile(List<String> proxyUrls) throws IOException {
+        Path filePath = githubProxyFile;
 
-        // 确保以 / 结尾（空字符串除外）
-        String normalizedUrl = "";
-        if (proxyUrl != null && !proxyUrl.trim().isEmpty()) {
-            normalizedUrl = proxyUrl.trim().endsWith("/") ? proxyUrl.trim() : proxyUrl.trim() + "/";
-        }
+        // 限制最多 5 个代理
+        List<String> limitedProxies = proxyUrls.stream()
+                .limit(MAX_PROXY_COUNT)
+                .map(this::normalizeProxyUrl)
+                .collect(Collectors.toList());
 
-        // 写入文件
+        // 写入文件（多行）
         Files.createDirectories(filePath.getParent());
-        Files.writeString(filePath, normalizedUrl, StandardOpenOption.CREATE, StandardOpenOption.TRUNCATE_EXISTING);
+        Files.write(filePath, limitedProxies, StandardOpenOption.CREATE, StandardOpenOption.TRUNCATE_EXISTING);
 
-        log.info("已保存 GitHub 代理到文件: {} -> {}", GITHUB_PROXY_FILE, normalizedUrl);
+        log.info("已保存 {} 个 GitHub 代理到文件: {}", limitedProxies.size(), filePath);
     }
 
     /**
-     * 从文件读取 GitHub 代理
+     * 从文件读取 GitHub 代理列表（多行格式）
      */
-    public String readFromFile() {
-        Path filePath = Paths.get(GITHUB_PROXY_FILE);
+    public List<String> readProxyListFromFile() {
+        Path filePath = githubProxyFile;
         if (!Files.exists(filePath)) {
-            return "";
+            return Collections.emptyList();
         }
 
         try {
-            return Files.readString(filePath).trim();
+            return Files.readAllLines(filePath).stream()
+                    .map(String::trim)
+                    .limit(MAX_PROXY_COUNT)
+                    .collect(Collectors.toList());
         } catch (IOException e) {
-            log.error("读取 GitHub 代理文件失败: {}", GITHUB_PROXY_FILE, e);
-            return "";
+            log.error("读取 GitHub 代理文件失败: {}", filePath, e);
+            return Collections.emptyList();
         }
+    }
+
+    /**
+     * 规范化代理 URL：确保以 / 结尾（空字符串除外）
+     */
+    private String normalizeProxyUrl(String proxyUrl) {
+        if (DIRECT_PROXY.equals(proxyUrl)) {
+            return DIRECT_PROXY;
+        }
+        String trimmed = proxyUrl.trim();
+        return trimmed.endsWith("/") ? trimmed : trimmed + "/";
+    }
+
+    /**
+     * 使用代理列表下载文件，支持自动 fallback
+     * 按顺序尝试每个代理，最多尝试 5 个，失败则尝试下一个
+     */
+    public Response downloadWithFallback(String githubUrl, List<String> proxyList) throws IOException {
+        if (proxyList == null || proxyList.isEmpty()) {
+            // 没有配置代理，直接下载
+            return downloadDirect(githubUrl);
+        }
+
+        // 限制最多尝试 5 个代理
+        List<String> limitedProxies = proxyList.stream()
+                .limit(MAX_PROXY_COUNT)
+                .collect(Collectors.toList());
+
+        IOException lastException = null;
+
+        for (int i = 0; i < limitedProxies.size(); i++) {
+            String proxy = limitedProxies.get(i);
+            try {
+                return tryDownloadWithProxy(proxy, githubUrl, i + 1, limitedProxies.size());
+            } catch (IOException e) {
+                lastException = e;
+                log.warn("代理 {}/{} ({}) 下载失败: {}", i + 1, limitedProxies.size(), proxy, e.getMessage());
+                // 继续尝试下一个代理
+            }
+        }
+
+        // 所有代理都失败
+        throw new IOException("所有 GitHub 代理均失败 (" + limitedProxies.size() + " 个已尝试)", lastException);
+    }
+
+    /**
+     * 尝试使用单个代理下载
+     */
+    private Response tryDownloadWithProxy(String proxy, String githubUrl, int index, int total) throws IOException {
+        if (DIRECT_PROXY.equals(proxy)) {
+            // 空字符串表示直连
+            log.info("尝试直连下载 (代理 {}/{}): {}", index, total, githubUrl);
+            return downloadDirect(githubUrl);
+        } else {
+            // 使用代理下载
+            String proxyUrl = normalizeProxyUrl(proxy) + githubUrl;
+            log.info("尝试使用代理 {}/{} 下载: {} -> {}", index, total, proxy, githubUrl);
+            return downloadDirect(proxyUrl);
+        }
+    }
+
+    /**
+     * 直接下载（不使用代理或使用完整 URL）
+     */
+    private Response downloadDirect(String url) throws IOException {
+        Request request = new Request.Builder()
+                .url(url)
+                .get()
+                .build();
+
+        Response response = httpClient.newCall(request).execute();
+        if (!response.isSuccessful()) {
+            response.close();
+            throw new IOException("下载失败: HTTP " + response.code());
+        }
+        return response;
+    }
+
+    /**
+     * 兼容旧版：保存单个代理到文件（现在保存为单行列表）
+     */
+    public void saveToFile(String proxyUrl) throws IOException {
+        saveProxyListToFile(Collections.singletonList(proxyUrl));
+    }
+
+    /**
+     * 兼容旧版：从文件读取单个代理（现在读取第一行）
+     */
+    public String readFromFile() {
+        List<String> proxies = readProxyListFromFile();
+        return proxies.isEmpty() ? "" : proxies.get(0);
     }
 }
